  *  - All project makefiles now correctly clean intermediate build files from assembly and C++ sources (thanks to Daniel Czigany)
  *  - Removed the EVENT_USB_InitFailure() event, not specifying a USB mode now defaults to UID selection mode
  *  - Renamed and moved class driver common constant definitions to make the naming scheme more uniform
  *
  *  <b>Fixed:</b>
  *  - Fixed USB_GetHIDReportItemInfo() function modifying the given report item's data when the report item does not exist
  *    within the supplied report of a multiple report HID device
  *  - Fixed MassStorage based demos and projects resetting the SCSI sense values before the command is executed, leading to
  *    missed SCSI sense values when the host retrieves the sense key (thanks to Martin Degelsegger)
  *  - Fixed critical pipe/endpoint memory allocation issue where the bank memory address space could be silently overlapped
  *    in the USB controller if the endpoints or pipes were allocated in anything other than ascending order (thanks to Martin Degelsegger)
  *  - Fixed USBtoSerial and Benito project SetLineEncoding calls failing if the USART is busy, due to the RX ISR delaying the control
  *    request handler
  *  - Fixed LowLevel PrinterHost demo not sending control requests to the attached printer with the correct printer interface wIndex value
  *  - Added LEDs_ToggleLEDs() function to several board LED drivers which were missing it (thanks to Andrei Krainev)
  *  - Fixed SET FEATURE and CLEAR FEATURE control requests directed at an unconfigured endpoint causing request timeouts
  *  - Fixed incorrect signature reported in the CDC class bootloader for the ATMEGA32U2
  *  - Fixed USB_Host_ClearPipeStall() incorrectly determining the endpoint direction from the currently selected pipe
  *  - Fixed JTAG_DEBUG_POINT() and JTAG_DEBUG_BREAK() macros not compiling under pure C99 standards mode